trustfall_core/test_data/tests/parse_errors/duplicate_fold.parse-error.ron
Err(UnsupportedDuplicatedDirective("@fold", Pos(
  line: 6,
  column: 42,
)))
